# pega-plantao-crawler

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_specialty_code.py
src/: __init__.py  cfm_config.py  config.py  main.py
src/auth/: __init__.py  login.py
src/cfm/: __init__.py  cache.py  cli.py  config.py  crawler.py  models.py
src/cfm/db/: __init__.py  captcha.py  connection.py  doctors.py  executions.py  schema.py  specialties.py  state_counts.py
src/cfm_crawler/: __init__.py  cli.py  config.py
src/cfm_crawler/models/: __init__.py  domain.py  entities.py
src/cfm_crawler/repositories/: __init__.py  captcha_repo.py  doctor_repo.py  specialty_repo.py  state_count_repo.py
src/cfm_crawler/services/: __init__.py  cfm_api.py
src/cfm_crawler/use_cases/: __init__.py  count_doctors.py  crawl_all_doctors.py  crawl_state_doctors.py  lookup_doctor.py  manage_token.py  sync_specialties.py
src/crawler/: __init__.py  sectors.py  services.py
src/database/: __init__.py  base.py  session.py
src/models/: __init__.py  sector.py  service.py
src/pega_plantao/: __init__.py  auth.py  cli.py  crawler.py  models.py
src/pega_plantao/utils/: __init__.py  date_utils.py  http_client.py
src/pega_plantao_crawler/: __init__.py  cli.py  config.py
src/pega_plantao_crawler/models/: __init__.py
src/pega_plantao_crawler/services/: __init__.py  api_client.py  auth.py
src/pega_plantao_crawler/use_cases/: __init__.py  fetch_services.py
src/shared/: __init__.py  constants.py  specialty_parser.py  text_utils.py
src/utils/: __init__.py  date_utils.py  http_client.py
