[project]
name = "pega-plantao-crawler"
version = "0.1.0"
description = "Web crawler para PegaPlantão usando Playwright e httpx"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
pega-plantao = "src.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
