[project]
name = "pega-plantao-crawler"
version = "0.2.0"
description = "Web crawlers para PegaPlantão e CFM usando Playwright e httpx"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "typer>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
cfm = "src.cfm.cli:app"
pega-plantao = "src.pega_plantao.cli:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
