[project]
name = "qp-data-service"
version = "0.3.0"
description = "Serviço de consulta e coleta de dados médicos para o QueryPlantao"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    "typer>=0.9.0",
    "InquirerPy>=0.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
cfm-crawler = "src.cfm_crawler.cli:app"
pega-plantao = "src.pega_plantao_crawler.cli:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
